原生编译：手动注册 SelectorProvider 及其子类；增加 add-opens 参数